# sql-split

./: .gitignore  README.md  build_app.py  build_macos.sh  build_windows.bat  index.html  package-lock.json  package.json  sql_split_gui.py  sql_splitter.py  test_sql_splitter.py
.github/workflows/: build-desktop.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
