[package]
name = "sql_splitter_tauri"
version = "0.1.0"
description = "Cross-platform SQL splitter"
authors = ["twilitzz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
